# applied_category_theory

./: LICENSE  Makefile  README.md  exercises.ipynb  pyproject.toml
Applied Category Theory (18.s097-january-iap-2019)/: content_map.json  data.json  index.html  sitemap.xml
Applied Category Theory (18.s097-january-iap-2019)/download/: index.html  index.xml
Applied Category Theory (18.s097-january-iap-2019)/pages/: index.html
Applied Category Theory (18.s097-january-iap-2019)/pages/assignments/: data.json  index.html
Applied Category Theory (18.s097-january-iap-2019)/pages/instructor-insights/: data.json  index.html
Applied Category Theory (18.s097-january-iap-2019)/pages/lecture-videos-and-readings/: data.json  index.html
Applied Category Theory (18.s097-january-iap-2019)/pages/syllabus/: data.json  index.html
Applied Category Theory (18.s097-january-iap-2019)/resources/18-s097iap19/: data.json  index.html
Applied Category Theory (18.s097-january-iap-2019)/resources/18-s097iap19-th/: data.json  index.html
Applied Category Theory (18.s097-january-iap-2019)/resources/18-s097iap19ch1/: data.json  index.html
Applied Category Theory (18.s097-january-iap-2019)/resources/18-s097iap19ch2/: data.json  index.html
Applied Category Theory (18.s097-january-iap-2019)/resources/18-s097iap19ch3/: data.json  index.html
Applied Category Theory (18.s097-january-iap-2019)/static_resources/: index.html
Seven Sketches in Compositionality: An Invitation to Applied Category Theory/: 1 Generative effects: Orders and adjunctions .ipynb
(+70 files in other folders)
