[tool.poetry]
name = "category-theory"
version = "0.1.0"
description = "A VS Code project with Jupyter Notebook support"
authors = ["Mark Grandau <mgrandau@gmail.com>"]
license = "MIT"
package-mode = false  # Disable package mode

[tool.poetry.dependencies]
python = "^3.12"  # or your preferred Python version
jupyter = "*"
ipykernel = "*"
matplotlib = "*"
numpy = "*"
pandas = "*"
scipy = "*"
jupyterlab = "*"  # Optional: For Jupyter Lab support
notebook = "*"  # Core notebook support
seaborn = "*"  # Optional: For statistical data visualization
uri-template = "*"  # Optional: For URI template support
comm = "*"  # Optional: For comm support

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
